--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -36,6 +36,21 @@
           {{ end }}
         </ul>
       </div>
+      &nbsp;
+      &nbsp;
+      <div class="row platform-links">
+        <div class="col-12">
+          {{ range .Site.Data.homepage.showcase.socialLinks }}
+          <a href="{{ .URL | absURL }}" target="_blank"
+            ><i class="icon-{{ .icon }}-line"></i
+          ></a>
+          {{ end }}
+        </div>
+      </div>
+      &nbsp;
+      &nbsp;
+      &nbsp;
+      <p style="color:#e93e34; margin-top: 28px">+420 777 621 311</p>
     </nav>
   </div>
 </header>
