mobile fixes - test

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -459,6 +459,12 @@ dd, label, legend {
     --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace
 }
 
+@media (max-width:728px){
+    .no-mobile {
+      display:none;
+    }
+}
+
 *, ::after, ::before {
     box-sizing: border-box
 }
