mobile fixes - test 2

--- a/layouts/partials/firmy_body.html
+++ b/layouts/partials/firmy_body.html
@@ -2,7 +2,7 @@
 <section id="firmy_body" class="section section--border-bottom rad-animation-group">
     <div class="container">
         <div class="row flex-column-reverse flex-md-row rad-fade-down">
-                <div class="col-12 col-sm-6">
+                <div class="col-12 col-sm-6 no-mobile">
                     <h2>{{ .Site.Data.homepage.firmy_body.title }}</h2>
                     <p class="lead">
                         {{ .Site.Data.homepage.firmy_body.description }}
