--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4035,7 +4035,7 @@ input[type=button].btn-block, input[type=reset].btn-block, input[type=submit].bt
 }
 
 .navbar-toggler-icon {
-    display: inline-block;
+  /*  display: inline-block; */
     width: 1.5em;
     height: 1.5em;
     vertical-align: middle;
