--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -217,6 +217,9 @@
     }
 </style>
 
+<!-- Live chat: -->
+<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="cab47995-c87a-46a6-aab3-256300d7c5b7";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+
 {{ range .Site.Params.plugins.css }}
 <link rel="stylesheet" href="{{ .URL | absURL }}"/>
 {{ end }}
