--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                         <div class="field">
-                            <label for="subject" style="display: none;">Předmět:</label>
+                            <label for="subject" style="display: none;"></label>
                             <input type="hidden" name="subject" id="subject" value="Zpráva z webu www.solarnimise.cz"/>
                         </div>
                     </form>
