--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -12,7 +12,7 @@
                                        placeholder="{{ .Site.Data.homepage.contact.form.full_name }}"/>
                             </div>
                             <div class="col-12 col-sm-6">
-                                <input type="text" name="mail" id="email"
+                                <input type="text" name="email" id="email"
                                        placeholder="{{ .Site.Data.homepage.contact.form.email }}"/>
                             </div>
                         </div>
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                         <div class="field">
-                            <label for="subject" style="display: none;"></label>
+                            <label for="subject" style="display: none;">__</label>
                             <input type="hidden" name="subject" id="subject" value="Zpráva z webu www.solarnimise.cz"/>
                         </div>
                     </form>
