--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,6 +18,7 @@
         f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', '{{ .Site.Params.googleTagManagerID }}');
 </script>
+<title>Solární mise</title>
 <!-- End Google Tag Manager -->
 <!-- endinject -->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
