--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,5 +1,8 @@
 {{ if .Site.Data.homepage.contact.enable }}
 <section id="contact" class="section section--contact pt-0">
+    <p style="position:relative;">
+        <a name="kontakt" style="position:absolute; top:+350px;"></a>
+    </p>
     <div class="container">
         <div class="contact">
             <h2>{{ .Site.Data.homepage.contact.title }}</h2>
