--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -215,6 +215,10 @@
             transform: scaleY(1);
         }
     }
+    /* Smooth scroll animation */
+    html {
+        scroll-behavior: smooth;
+      }
 </style>
 
 <!-- Live chat: -->
