--- a/layouts/partials/showcase.html
+++ b/layouts/partials/showcase.html
@@ -30,7 +30,7 @@
           {{ .Site.Data.homepage.showcase.button.btnText }}
         </a>
         <a
-        href="{{ .Site.Data.homepage.showcase.button.URL | absURL }}"
+        href="{{ .Site.Data.homepage.showcase.button2.URL | absURL }}"
         class="btn btn-primary"
         >
           <i class="{{ .Site.Data.homepage.showcase.button.icon }}"></i>
