--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,7 +1,7 @@
 {{ if .Site.Data.homepage.contact.enable }}
 <section id="contact" class="section section--contact pt-0">
     <p style="position:relative;">
-        <a name="kontakt" style="position:absolute; top:+350px;"></a>
+        <a name="kontakt" style="position:absolute"></a>
     </p>
     <div class="container">
         <div class="contact">
