--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,6 +21,8 @@
 <title>Solární mise</title>
 <!-- End Google Tag Manager -->
 <!-- endinject -->
+<meta name="description" content="Šetříte planetu i své náklady? My Vám v tom pomůžeme, vedeme pro Vás SOLÁRNÍ MISI! 
+Zařizujeme realizaci na klíč i s dotací. Nezávazně si nás vyzkoušejte."/>
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
