phone no hidden

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -54,7 +54,7 @@
       </div>
       <div class="no-mobile">
         &nbsp;
-        <p style="color:#e93e34; margin-top: 5px">+420 777 621 311</p>
+        <p style="color:#e93e34; margin-top: 5px"></p>
       </div>
     </nav>
   </div>
