telefon do contact formu

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -15,6 +15,10 @@
                                 <input type="text" name="email" id="email"
                                        placeholder="{{ .Site.Data.homepage.contact.form.email }}"/>
                             </div>
+                            <div class="col-12 col-sm-6">
+                                <input type="text" name="phone" id="phone"
+                                       placeholder="{{ .Site.Data.homepage.contact.form.phone }}"/>
+                            </div>
                         </div>
                         <div class="row pt-4">
                             <div class="col-12">
